[Alvaro Riquez-feat]: Login y Control de Usuarios
Se realizo la autenticación para el login y se realiza mayor parte del CRUD del control de usuarios incluyendo que la contraseña editada o añadida sea encriptada, falta corregir roles en agregar usuario y editar

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,7 +10,7 @@
   },
   "include": [
     "src/**/*.ts"
-  ],
+  , "src/app/api/authenticate.api.ts"  ],
   "exclude": [
     "src/**/*.spec.ts"
   ]
